--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "peerDependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-native": "0.76.1",
+    "axios": "^1.7.9"
   },
   "publishConfig": {
     "access": "public"
